# itzli-nahuatl-learning-app

./: .env.example  .gitignore  CLAUDE.md  EHN_Vocabulary_Exhaustive_Revisions.md  LICENSE  NOTICE.md  README.md  next.config.ts  package-lock.json  package.json
docs/: curriculum-audit.md  voices.md
ml/ehn-morph/: .gitignore  README.md  pyproject.toml
ml/ehn-morph/src/ehn_morph/: __init__.py  __main__.py  analyzer.py  cli.py  db_path.py  lexicon.py  normalize.py  prefixes.py  suffixes.py  types.py
ml/ehn-morph/tests/: conftest.py  test_analyzer.py  test_normalize.py
scripts/: _db-path.js  add-construction-translations.js  add-curated-vocab.js  add-dialogue-translations.js  apply-remaining-gloss-fixes.js  audit-app-content-exclusions.js  audit-course-quality.js  audit-fix-all.js  audit-openai-word-images.js  audit-overaggressive-image-exclusions.js  audit-setup.js  colab_xtts.py  db-setup.js  dedup-expansion-variants.js  delete-misplaced-country-names.js  delete-variant-duplicates.js  expand-vocab-from-lexicon.js  fetch-db.js  fetch-images.js  fetch-word-images.js  fix-person-glosses.js  fix-vocab-errors.js  generate-audio.py  generate-dialogues-33-43.js  generate-dialogues.js  generate-google-audio.js  generate-openai-audio.js  generate-openai-word-images.js  import-nahuatlahtolli-course.js  import-s3-word-images.js  make-openai-word-image-contact-sheets.js  preview-images.js  rag-populate.js  rag-setup.js  regenerate-dialogues-33-43.js  requirements-audio.txt  run-audio-python.js
scripts/config/: openai-reviewed-image-allowlist.json  (+1 more)
src/: middleware.ts
(+64 files in other folders)
