[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ehn-morph"
version = "0.1.0"
description = "Morphological analyzer for Eastern Huasteca Nahuatl (EHN)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "See project LICENSE" }
authors = [{ name = "Sam Villa-Smith" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: Other",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ehn-morph = "ehn_morph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
